# SDL3-game

./: CMakeLists.txt  README.md
includes/: SDL_App.hpp
includes/entities/: entity.h  player.h
includes/extras/: custom_math.hpp  custom_sdl.h  data_manager.h  global_var.h  renderer_manager.h  resource_manager.h
includes/levels/: level.h  level_manager.h
includes/tiles/: tile.h  tilemap.h
res/data/: client_data.json  entity_data.json  texture_data.json  texture_paths.json
res/levels/: test.json
src/: main.cpp
src/entities_src/: entity.cpp  player.cpp
src/extras_src/: custom_sdl.cpp  data_manager.cpp  global_var.cpp  renderer_manager.cpp  resource_manager.cpp
src/levels_src/: level.cpp  level_manager.cpp
src/tiles_src/: tile.cpp  tilemap.cpp
